Sanitize SVG files for proper display

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <!-- Header -->
     <header>
         <div id="logo">
-            <a href="home.html"><img src="./resources/logo.svg"></a>
+            <a href="home.html"><img src="./resources/logo.svg?sanitize=true"></a>
         </div>
         <div id="square">
-            <a href="experience.html"><img src="./resources/square.svg"></a>
+            <a href="experience.html"><img src="./resources/square.svg?sanitize=true"></a>
         </div>
         <div id="triangle">
-            <a href="education.html"><img src="./resources/triangle.svg"></a>
+            <a href="education.html"><img src="./resources/triangle.svg?sanitize=true"></a>
         </div>
         <div id="circle">
-            <a href="service.html"><img src="./resources/circle.svg"></a>
+            <a href="service.html"><img src="./resources/circle.svg?sanitize=true"></a>
         </div>
     </header>
 
