--- a/home.html
+++ b/home.html
@@ -13,16 +13,16 @@
 <body>
     <header>
         <div class="icon">
-            <a href="home.html"><img src="./resources/logo.svg"></a>
+            <a href="home.html"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1207 562.61"><rect x="43" y="88.97" width="654" height="104" style="fill:#c4e4ec"/><rect x="175" y="260.97" width="625" height="106" style="fill:#ebd9be"/><text transform="translate(3 170.8)" style="font-size:200px;fill:#231f20;font-family:PlayfairDisplay-Bold, Playfair Display;font-weight:700"><tspan style="letter-spacing:-0.03em">A</tspan><tspan x="127.4" y="0">ustin</tspan></text><rect x="256" y="433.97" width="951" height="107" style="fill:#e5bebb"/><text transform="translate(146.1 339.01)" style="font-size:200px;fill:#231f20;font-family:PlayfairDisplay-Bold, Playfair Display;font-weight:700;letter-spacing:-0.019990234375em">J<tspan x="68.8" y="0" style="letter-spacing:0.00000244140625em">ames</tspan></text><text transform="translate(225.19 514.01)" style="font-size:200px;fill:#231f20;font-family:PlayfairDisplay-Bold, Playfair Display;font-weight:700">Robinson</text></svg></a>
         </div>
         <div class="squareicon">
-            <a href="home.html"><img src="./resources/square.svg"></a>
+            <a href="home.html"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1300.15 1294.94"><rect width="1300.15" height="1294.94" style="fill:#c4e4ec"/></svg></a>
         </div>
         <div class="triangleicon">
-            <a href="home.html"><img src="./resources/triangle.svg"></a>
+            <a href="home.html"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1300 1295"><polygon points="650 0 0 1295 1300 1295 650 0" style="fill:#ebd9be"/></svg></a>
         </div>
         <div class="circleicon">
-            <a href="home.html"><img src="./resources/circle.svg"></a>
+            <a href="home.html"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1300 1295"><ellipse cx="650" cy="647.5" rx="650" ry="647.5" style="fill:#e5bebb"/></svg></a>
         </div>
     </header>
     <p>Hello,<br><br>My name is Austin Robinson and this is my website. I made it for professional and personal reasons. The former being for prospective employers and potential collaborators to see my past, present, and future work. The latter being for the people in my life and all around the world to understand me and my accomplishments better, as well as to provide them with updates.<br><br>The page menu will take you to a variety of content I have experienced and created, from my résumé to my creative portfolio. You'll get a detailed look into my volunteer events, the philanthropic endeavors I founded, my education history, and more.<br><br>You can connect with me through the methods below:</p>
