--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="home.html"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1207 562.61"><rect x="43" y="88.97" width="654" height="104" style="fill:#c4e4ec"/><rect x="175" y="260.97" width="625" height="106" style="fill:#ebd9be"/><text transform="translate(3 170.8)" style="font-size:200px;fill:#231f20;font-family:PlayfairDisplay-Bold, Playfair Display;font-weight:700"><tspan style="letter-spacing:-0.03em">A</tspan><tspan x="127.4" y="0">ustin</tspan></text><rect x="256" y="433.97" width="951" height="107" style="fill:#e5bebb"/><text transform="translate(146.1 339.01)" style="font-size:200px;fill:#231f20;font-family:PlayfairDisplay-Bold, Playfair Display;font-weight:700;letter-spacing:-0.019990234375em">J<tspan x="68.8" y="0" style="letter-spacing:0.00000244140625em">ames</tspan></text><text transform="translate(225.19 514.01)" style="font-size:200px;fill:#231f20;font-family:PlayfairDisplay-Bold, Playfair Display;font-weight:700">Robinson</text></svg></a>
         </div>
         <div id="square">
-            <a href="experience.html"><img src="./resources/square.svg?sanitize=true"></a>
+            <a href="experience.html"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1300.15 1294.94"><rect width="1300.15" height="1294.94" style="fill:#c4e4ec"/></svg></a>
         </div>
         <div id="triangle">
             <a href="education.html"><img src="./resources/triangle.svg?sanitize=true"></a>
