Fix SVG problem v2

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <a href="experience.html"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1300.15 1294.94"><rect width="1300.15" height="1294.94" style="fill:#c4e4ec"/></svg></a>
         </div>
         <div id="triangle">
-            <a href="education.html"><img src="./resources/triangle.svg?sanitize=true"></a>
+            <a href="education.html"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1300 1295"><polygon points="650 0 0 1295 1300 1295 650 0" style="fill:#ebd9be"/></svg></a>
         </div>
         <div id="circle">
-            <a href="service.html"><img src="./resources/circle.svg?sanitize=true"></a>
+            <a href="service.html"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1300 1295"><ellipse cx="650" cy="647.5" rx="650" ry="647.5" style="fill:#e5bebb"/></svg></a>
         </div>
     </header>
 
